--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     -->
-    <title>Scaffold-React</title>
+    <title>grf-React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
